--- a/game.html
+++ b/game.html
@@ -15,7 +15,8 @@
 	<img id="fish-3" src="asset/fish-3.png">
 	<div class="player"></div>
 </div>
-
 </body>
-<script src="js/fish-path.js"></script>
+<script>
+console.log("hello");
+</script>
 </html>
