--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Subway Atlantis</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-
+<div class="game">
+	<!-- <video width="100%" height="640" controls>
+		<source src="movie.mp4" type="video/mp4">
+	Trình duyệt của bạn không hỗ trợ video
+	</video>  -->
+	<div class="logo">		
+		<h1 id="black-outline">SUBWAY ATLANTIS</h1>
+		<h1 id="white-outline">SUBWAY ATLANTIS</h1>
+		<h1 id="logo-color">SUBWAY ATLANTIS</h1>
+	</div>
+	<button onclick="location='game.html'">Play
+		<svg fill="currentColor" viewBox="0 0 24 24" class="icon">
+			<path clip-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z" fill-rule="evenodd"></path>
+		</svg>
+	</button>
+</div>
 </body>
 </html>
